# Astro-agent

./: EVAL.md  README.md
backend/: .gitignore  astroagent.db  database.py  main.py  pyproject.toml
backend/api/: birth_chart.py  birth_profile.py  chart.py  chat.py  health.py  user.py
backend/core/: logging.py  settings.py
backend/data/: astrology_notes.md
backend/evals/: golden_set.jsonl  results.json  results1.json  runner.py
backend/graph/: agent.py  astro_graph.py  llm.py  nodes.py  runner.py  state.py  tools.py
backend/knowledge/: career.md  houses.md  planets.md  relationships.md  transits.md
backend/models/: birth_profile.py  conversation.py  memory.py  natal_chart.py  usage_metric.py  user.py
backend/rag/: retriever.py
backend/schemas/: birth_profile.py  chart.py  chat.py  natal_chart.py
backend/services/: birth_profile_service.py  conversation_service.py  knowledge_service.py  memory_service.py  natal_chart_service.py  usage_service.py  user_service.py
backend/tests/: test_geocode.py  test_groq.py  test_scratch_chart.py
backend/tools/: astrology_utils.py  birth_chart.py  chart_engine.py  geocode.py  houses.py  knowledge_tool.py  registry.py  transits.py  user_tools.py
frontend/: index.html  package.json
frontend/src/: App.tsx
frontend/src/api/: base.ts  birth-profile.ts  chat.ts  natal-chart.ts  user.ts
frontend/src/components/: BirthDetailsModal.tsx  NameModal.tsx  navbar.tsx
frontend/src/config/: site.ts
frontend/src/layouts/: default.tsx
frontend/src/pages/: chart.tsx  chat.tsx  landing.tsx
frontend/src/utils/: user.ts
(+1 files in other folders)
