[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.136.3",
    "geopy>=2.4.1",
    "langchain>=1.3.2",
    "langchain-groq>=1.1.2",
    "langgraph>=1.2.2",
    "pydantic>=2.13.4",
    "pyswisseph>=2.10.3.2",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.50",
    "timezonefinder>=8.2.4",
    "uvicorn>=0.48.0",
]
